[gd_scene load_steps=2 format=2]

[ext_resource path="res://environment/sector_music_fade/sector_music_fade.gd" type="Script" id=1]

[node name="SectorMusicFade" type="Node2D"]
script = ExtResource( 1 )

[node name="FadeInSectorTrack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FadeInSectorTrack"]

[node name="FadeOutSectorTrack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FadeOutSectorTrack"]
